<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="40dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".StripeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:paddingBottom="30dp"
        android:textColor="@color/gradient_end"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:text="@string/upgrade_message" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/offer_page"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/subscription_argument_events"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/subscription_argument_weather"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/subscription_argument_messages"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/subscription_argument_harbour"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/one_day_offer"
            android:background="@drawable/rounded_layout"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:elevation="8dp"
            android:layout_marginTop="20dp"
            android:paddingVertical="25dp"
            android:paddingHorizontal="55dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:text="@string/one_day"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="23sp"
                android:text="1,99€"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/two_days_offer"
            android:background="@drawable/rounded_layout"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:elevation="8dp"
            android:paddingVertical="25dp"
            android:paddingHorizontal="55dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="23sp"
                android:text="@string/two_days"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="23sp"
                android:text="2,99€"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/one_month_offer"
            android:background="@drawable/rounded_layout"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:elevation="8dp"
            android:paddingVertical="25dp"
            android:paddingHorizontal="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:text="@string/one_month"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="23sp"
                android:text="9,99€"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/payment_page"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/custom_duration_message"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:paddingBottom="40dp"
            android:text="@string/subscription_one_day_message"/>

        <com.stripe.android.view.CardInputWidget
            android:id="@+id/cardInputWidget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:text="Pay"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/payButton"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/profile_blue_buttons"
            android:textColor="@color/white"
            android:background="@drawable/cancel_button"/>

        <Button
            android:text="Cancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_pay"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:background="@drawable/cancel_button"/>
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/payment_confirmation_message"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:text="@string/payment_successed_message"/>

</LinearLayout>