<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp">

        <ImageButton
            android:id="@+id/settings_back_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@android:color/transparent"
            android:src="@drawable/left_arrow"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/account"
            android:textColor="@color/gradient_end"
            android:textSize="26sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/placeholder_username"
            android:textColor="@color/gradient_end"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_edit_text"
            android:drawableEnd="@drawable/ic_edit"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/placeholder_username"
            android:textColor="@color/black"
            tools:ignore="Autofill,LabelFor,TextFields" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/prompt_email"
            android:textColor="@color/gradient_end"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_edit_text"
            android:drawableEnd="@drawable/ic_edit"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/prompt_email"
            android:textColor="@color/black"
            tools:ignore="Autofill,LabelFor,TextFields" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/placeholder_ship_name"
            android:textColor="@color/gradient_end"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ship_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_edit_text"
            android:drawableEnd="@drawable/ic_edit"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/placeholder_ship_name"
            android:textColor="@color/black"
            tools:ignore="Autofill,LabelFor,TextFields" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/oceanshare_logo"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/legal_mentions" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:height="60dp"
            android:background="@color/white"
            android:text="@string/delete_my_account"
            android:textColor="@color/profile_red_buttons"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>