<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".authentication.WalkthroughFragment">

    <FrameLayout
        android:orientation="vertical"
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_gravity="center"
            android:src="@drawable/logo"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
            android:id="@+id/buttonStart"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:background="@drawable/round_blue_button"
            android:text="@string/start"
            android:textColor="@color/white"
            android:textSize="@dimen/connection_button_text_size"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal|bottom"
            app:initialCornerAngle="100dp"
            app:spinning_bar_color="@color/white"
            app:spinning_bar_padding="6dp"
            app:spinning_bar_width="4dp" />

        <TextView
            android:text="@string/legals"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_height="30dp"/>
    </FrameLayout>

        <LinearLayout
            android:id="@+id/walkthroughContainer"
            android:background="#AA000000"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo_white"
                android:layout_marginTop="20dp"
                android:layout_width="200dp"
                android:layout_height="100dp" />

            <android.support.v4.view.ViewPager
                android:id="@+id/walkthroughPager"
                android:layout_width="wrap_content"
                android:layout_marginTop="-110dp"
                android:layout_marginHorizontal="50dp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/buttonOk"
                android:layout_width="wrap_content"
                android:text="@string/action_ok"
                android:textColor="@color/white"
                android:layout_marginTop="-110dp"
                android:background="@drawable/round_blue_button"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textAlreadyKnowOceanshare"
                android:text="@string/already_know_oceanshare"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="30dp"/>

        </LinearLayout>
</RelativeLayout>