<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

   <android.support.v7.widget.AppCompatImageView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_home"/>

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        mapbox:mapbox_styleUrl="@string/mapbox_style_mapbox_streets" />

    <android.support.v7.widget.CardView
        android:id="@+id/centerCameraButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="bottom|end"
        android:elevation="12dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="150dp"
        app:cardCornerRadius="40dp">
        <ImageView
            android:layout_gravity="center"
            android:tint="@color/deep_blue"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_location"
            android:scaleType="centerCrop"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/openMarkerMenuButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="bottom|end"
        android:elevation="12dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="80dp"
        app:cardCornerRadius="40dp">
        <ImageView
            android:tint="@color/deep_blue"
            android:layout_gravity="center"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_pin"
            android:scaleType="centerCrop"/>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/markerDescription"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="10dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#BA000000" >
        <TextView
            android:textAlignment="center"
            android:textColor="@color/white"
            android:text="Vous pouvez ajouter une\ndescription optionnelle à votre\névenement."
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/markerTextDescription"
            android:layout_width="match_parent"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="What's happening ?"
            android:background="@drawable/rounded_edit_text"/>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/submitMarkerDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="30dp"
                android:text="@string/button_submit"
                android:textColor="@color/white"
                android:background="@drawable/ok_button"/>
            <View
                android:layout_width="10dp"
                android:layout_height="0dp"/>
            <Button
                android:id="@+id/cancelMarkerDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/button_cancel"
                android:background="@drawable/cancel_button"/>
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/marker_manager"/>
    <include layout="@layout/weather_marker"/>

    <FrameLayout
        android:id="@+id/markerMenu"
        android:visibility="gone"
        android:elevation="10dp"
        android:layout_width="match_parent"
        android:layout_marginBottom="50dp"
        android:layout_height="match_parent" >
        <View
            android:id="@+id/markerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#BA000000" />
        <LinearLayout
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                android:id="@+id/closeMarkerMenuButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:elevation="12dp"
                android:layout_marginBottom="30dp"
                app:cardCornerRadius="40dp">
                <ImageView
                    android:layout_gravity="center"
                    android:tint="@color/deep_blue"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_close"
                    android:scaleType="centerCrop"/>
            </android.support.v7.widget.CardView>
            <GridView
                android:id="@+id/markerGridView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:cacheColorHint="@color/white"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:verticalSpacing="20dp"
                android:horizontalSpacing="10dp"
                android:layout_gravity="center"
                android:numColumns="3"
                android:padding="5dp"
                android:layout_marginBottom="20dp"
                android:scrollbars="none"
                android:stretchMode="columnWidth"
                android:gravity="center" />
            <include android:id="@+id/meteoMarker" layout="@layout/marker_entry"/>
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/topBarStatus"
        android:background="@color/opaque_white"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="70dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="match_parent" >
            <ImageView
                android:id="@+id/notificationLogo"
                android:src="@drawable/logo"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:layout_gravity="center_vertical"
                android:layout_width="120dp"
                android:layout_height="40dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/notificationMarker"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:text="@string/validation_marker_added"
                android:textStyle="bold"
                android:textSize="28dp"
                android:textColor="@color/white"
                android:visibility="invisible"/>
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>